<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/txt_test_bitmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_bitmap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="testBitmapChache" />

    <Button
        android:id="@+id/txt_test_pacelable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_parcelable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="testPacelableCache"
        app:layout_constraintTop_toBottomOf="@+id/txt_test_bitmap" />

    <Button
        android:id="@+id/txt_test_serilizable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test_serilizable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="testSerilizableCache"
        app:layout_constraintTop_toBottomOf="@+id/txt_test_pacelable" />

</androidx.constraintlayout.widget.ConstraintLayout>